liquid-rust-tests/tests/neg/assert_terminators/test-check.rs
#![feature(register_tool)]
#![register_tool(lr)]
#![feature(custom_inner_attributes)]
#![lr::cfg(assert_terminator_behavior = "check")]

#[lr::sig(fn(x: i32, y: i32) -> i32)]
pub fn test(x: i32, y: i32) -> i32 { //~ ERROR postcondition might not hold
    x / y
}